--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 pandas = "^1.3.5"
+Flask = "^2.0.2"
+streamlit = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
